--- a/index.html
+++ b/index.html
@@ -107,14 +107,17 @@
             </div>
     </section>
 
-   <footer style="margin-top: 50px; padding: 40px; text-align: center; border-top: 1px solid rgba(255,255,255,0.1);">
-    <div style="margin-bottom: 20px;">
-        <a href="about.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">About Us</a>
-        <a href="contact.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">Contact Us</a>
-        <a href="disclaimer.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">Disclaimer</a>
-        <a href="privacy.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">Privacy Policy</a>
-    </div>
-    <p style="color: #666;">© 2025 MovieVerse. All Rights Reserved.</p>
-</footer>
+    <footer style="margin-top: 50px; padding: 40px; text-align: center; border-top: 1px solid rgba(255,255,255,0.1);">
+        <div style="margin-bottom: 20px;">
+            <a href="about.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">About Us</a>
+            <a href="contact.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">Contact Us</a>
+            <a href="disclaimer.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">Disclaimer</a>
+            <a href="privacy.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">Privacy Policy</a>
+        </div>
+        <p style="color: #666;">© 2025 MovieVerse. All Rights Reserved.</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
