--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieVerse - Magical</title>
+    <title>MovieVerse - Premium</title>
     
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8787520300246938"
-     crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8787520300246938" crossorigin="anonymous"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <canvas id="magic-cursor"></canvas>
+    <div class="cursor-dot"></div>
+    <div class="cursor-outline"></div>
 
-    <div class="background-container">
-        <div class="liquid-blob blob-1"></div>
-        <div class="liquid-blob blob-2"></div>
-        <div class="liquid-blob blob-3"></div>
-        <div class="noise-overlay"></div> </div>
+    <div class="ios-background">
+        <div class="aurora-blob blob-1"></div>
+        <div class="aurora-blob blob-2"></div>
+        <div class="aurora-blob blob-3"></div>
+        <div class="noise-overlay"></div>
+    </div>
 
-    <header class="floating-header animate-fade-up">
+    <header class="floating-header">
         <div class="header-left">
             <a href="#" class="header-icon">☰</a>
             <div class="logo">MOVIE<span>VERSE</span></div>
@@ -68,14 +70,13 @@
     </section>
 
     <div class="infinite-marquee">
-        <div class="marquee-content" id="dynamic-marquee">Loading Updates...</div>
+        <div class="marquee-content" id="dynamic-marquee">Welcome to MovieVerse • Stream & Download • Premium Collection</div>
     </div>
 
     <section class="folder-section">
         <h2 class="section-title">Browse <span>Collections</span></h2>
         <div class="bento-grid">
             <a href="https://drive.google.com/drive/folders/18ik8hhWmrGreRi4MMkLVAx0K0m_Pipkn?usp=sharing" target="_blank" class="bento-card tilt-card" data-tilt>
-                <div class="card-glow"></div>
                 <img src="https://cdn-icons-png.flaticon.com/512/3163/3163478.png" class="bento-icon">
                 <div class="bento-text">
                     <h3>Bollywood</h3>
@@ -83,7 +84,6 @@
                 </div>
             </a>
             <a href="https://drive.google.com/drive/folders/1bROGhuxx4rXk63O43ngdycZqEi2kD1XV?usp=sharing" target="_blank" class="bento-card tilt-card trendy-card" data-tilt>
-                <div class="card-glow"></div>
                 <img src="https://cdn-icons-png.flaticon.com/512/4251/4251984.png" class="bento-icon">
                 <div class="bento-text">
                     <h3>Trending</h3>
@@ -91,7 +91,6 @@
                 </div>
             </a>
             <a href="https://drive.google.com/drive/folders/1trRYRwTGjfH5_2jFxcPvO1In-MSig7FC?usp=sharing" target="_blank" class="bento-card tilt-card secret-card" data-tilt>
-                <div class="card-glow"></div>
                 <img src="https://cdn-icons-png.flaticon.com/512/2438/2438078.png" class="bento-icon">
                 <div class="bento-text">
                     <h3>Secret</h3>
@@ -104,17 +103,17 @@
     <section class="social-section">
         <h2 class="section-title">Follow <span>Us</span></h2>
         <div class="social-dock" id="dynamic-socials">
-            </div>
+             </div>
     </section>
 
-    <footer style="margin-top: 50px; padding: 40px; text-align: center; border-top: 1px solid rgba(255,255,255,0.1);">
+    <footer>
         <div style="margin-bottom: 20px;">
-            <a href="about.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">About Us</a>
-            <a href="contact.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">Contact Us</a>
-            <a href="disclaimer.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">Disclaimer</a>
-            <a href="privacy.html" style="color: #aaa; text-decoration: none; margin: 0 10px;">Privacy Policy</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="disclaimer.html">Disclaimer</a>
+            <a href="privacy.html">Privacy Policy</a>
         </div>
-        <p style="color: #666;">© 2025 MovieVerse. All Rights Reserved.</p>
+        <p>© 2026 MovieVerse. Designed with ❤️</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
