--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieVerse - Ultimate</title>
+    <title>vsmovies.online - Premium</title>
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8787520300246938" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <div id="loading-screen">
         <div class="loader-content">
             <div class="spinner-3d"></div>
-            <h2>LOADING UNIVERSE...</h2>
+            <h2>LOADING VSMOVIES...</h2>
         </div>
     </div>
 
@@ -28,7 +28,7 @@
     <header class="floating-header">
         <div class="header-left">
             <div class="header-icon magnetic-btn trigger-menu"><i class="ri-menu-4-line"></i></div>
-            <div class="logo"><i class="ri-movie-2-fill"></i> MOVIE<span>VERSE</span></div>
+            <div class="logo"><i class="ri-movie-2-fill"></i> VS<span>MOVIES</span></div>
         </div>
         <div class="header-right">
             <div onclick="toggleSearch()" class="header-icon magnetic-btn"><i class="ri-search-2-line"></i></div>
@@ -61,7 +61,7 @@
 
     <section class="hero-section" id="hero-section">
         <div class="hero-content">
-            <h1 class="hero-title">Cinema in <span class="gradient-text">Dimension X</span></h1>
+            <h1 class="hero-title">vsmovies<span class="gradient-text">.online</span></h1>
         </div>
         <div class="swiper my3DSwiper">
             <div class="swiper-wrapper" id="featured-wrapper"></div>
@@ -72,7 +72,7 @@
         </section>
 
     <div class="infinite-marquee">
-        <div class="marquee-content" id="dynamic-marquee">Welcome to MovieVerse • Premium Experience</div>
+        <div class="marquee-content" id="dynamic-marquee">Welcome to vsmovies.online • Premium Experience</div>
     </div>
 
     <section class="folder-section">
@@ -96,8 +96,19 @@
         </div>
     </section>
 
+    <section class="social-section">
+        <h2 class="section-title">Follow <span class="gradient-text">Us</span></h2>
+        <div class="social-dock" id="dynamic-socials"></div>
+    </section>
+
     <footer>
-        <p>© 2026 MovieVerse. Powered by WebGL.</p>
+        <div class="footer-links">
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
+            <a href="disclaimer.html">Disclaimer</a>
+            <a href="privacy.html">Privacy Policy</a>
+        </div>
+        <p>© 2026 vsmovies.online. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
