--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vsmovies.online - Premium</title>
     
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8787520300246938" crossorigin="anonymous"></script>
+    <script src="https://pl28493480.effectivegatecpm.com/b5/bb/96/b5bb96778a3954f8509b36869cc901c5.js"></script>
+    
+    <script src="https://pl28493455.effectivegatecpm.com/43/36/fd/4336fdae61326854ba11d45671bf114d.js"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
