--- a/public/index.html
+++ b/public/index.html
@@ -81,17 +81,17 @@
     <section class="folder-section">
         <h2 class="section-title">Collections</h2>
         <div class="bento-grid">
-            <a href="https://drive.google.com/drive/folders/18ik8hhWmrGreRi4MMkLVAx0K0m_Pipkn?usp=sharing" target="_blank" class="bento-card magnetic-card">
+            <a href="https://gplinks.co/hHuJ5p" target="_blank" class="bento-card magnetic-card">
                 <video class="hover-video" src="slidevideo1.mp4" loop muted></video>
                 <div class="card-icon-wrapper bollywood-glow"><i class="ri-film-fill bento-icon"></i></div>
                 <div class="bento-text"><h3>Bollywood</h3><p>Desi Hits</p></div>
             </a>
-            <a href="https://drive.google.com/drive/folders/1bROGhuxx4rXk63O43ngdycZqEi2kD1XV?usp=sharing" target="_blank" class="bento-card magnetic-card">
+            <a href="https://gplinks.co/bHE8pzA" target="_blank" class="bento-card magnetic-card">
                 <video class="hover-video" src="slidevideo2.mp4" loop muted></video>
                 <div class="card-icon-wrapper trending-glow"><i class="ri-fire-fill bento-icon"></i></div>
                 <div class="bento-text"><h3>Trending</h3><p>Viral Now</p></div>
             </a>
-            <a href="https://drive.google.com/drive/folders/1trRYRwTGjfH5_2jFxcPvO1In-MSig7FC?usp=sharing" target="_blank" class="bento-card magnetic-card">
+            <a href="https://gplinks.co/0c1af" target="_blank" class="bento-card magnetic-card">
                 <video class="hover-video" src="slidevideo3.mp4" loop muted></video>
                 <div class="card-icon-wrapper secret-glow"><i class="ri-shield-star-fill bento-icon"></i></div>
                 <div class="bento-text"><h3>Secret</h3><p>Private Vault</p></div>
