--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vsmovies.online - Premium</title>
     
+    <script src="https://quge5.com/88/tag.min.js" data-zone="202862" async data-cfasync="false"></script>
+
     <script src="https://pl28493480.effectivegatecpm.com/b5/bb/96/b5bb96778a3954f8509b36869cc901c5.js"></script>
     
     <script src="https://pl28493455.effectivegatecpm.com/43/36/fd/4336fdae61326854ba11d45671bf114d.js"></script>
@@ -81,17 +83,17 @@
     <section class="folder-section">
         <h2 class="section-title">Collections</h2>
         <div class="bento-grid">
-            <a href="https://gplinks.co/hHuJ5p" target="_blank" class="bento-card magnetic-card">
+            <a href="https://drive.google.com/drive/folders/18ik8hhWmrGreRi4MMkLVAx0K0m_Pipkn?usp=sharing" target="_blank" class="bento-card magnetic-card">
                 <video class="hover-video" src="slidevideo1.mp4" loop muted></video>
                 <div class="card-icon-wrapper bollywood-glow"><i class="ri-film-fill bento-icon"></i></div>
                 <div class="bento-text"><h3>Bollywood</h3><p>Desi Hits</p></div>
             </a>
-            <a href="https://gplinks.co/bHE8pzA" target="_blank" class="bento-card magnetic-card">
+            <a href="https://drive.google.com/drive/folders/1bROGhuxx4rXk63O43ngdycZqEi2kD1XV?usp=sharing" target="_blank" class="bento-card magnetic-card">
                 <video class="hover-video" src="slidevideo2.mp4" loop muted></video>
                 <div class="card-icon-wrapper trending-glow"><i class="ri-fire-fill bento-icon"></i></div>
                 <div class="bento-text"><h3>Trending</h3><p>Viral Now</p></div>
             </a>
-            <a href="https://gplinks.co/0c1af" target="_blank" class="bento-card magnetic-card">
+            <a href="https://drive.google.com/drive/folders/1trRYRwTGjfH5_2jFxcPvO1In-MSig7FC?usp=sharing" target="_blank" class="bento-card magnetic-card">
                 <video class="hover-video" src="slidevideo3.mp4" loop muted></video>
                 <div class="card-icon-wrapper secret-glow"><i class="ri-shield-star-fill bento-icon"></i></div>
                 <div class="bento-text"><h3>Secret</h3><p>Private Vault</p></div>
